# trtTest

./: .gitignore  CMakeLists.txt  main.cpp
AISTT/: CMakeLists.txt  main.cpp
AISTT/src/: aistt.cpp  aistt.h
AISTT/src/data/: data_store.cpp  data_store.h
AISTT/src/model/: model.cpp  model.h
AISTT/src/model/detection/: yolov8_det.cpp  yolov8_det.h
AISTT/src/model/segmentation/: yolov8_seg.cpp  yolov8_seg.h
AISTT/src/model/utils/: CUDA_postprocess.cu  CUDA_preprocess.cu  postprocess.cpp  postprocess.h  postprocess_det.cpp  postprocess_det.h  postprocess_seg.cpp  postprocess_seg.h  preprocess.cpp  preprocess.h
AISTT/src/stream/: camera_stream.h  dai_stream.cpp  dai_stream.h  image_stream.cpp  image_stream.h  input_stream.cpp  input_stream.h  video_stream.cpp  video_stream.h
AISTT/src/trt/: GoBuffer.cpp  Gobuffer.h  go_engine.cpp  go_engine.h  go_logger.h
common/: argsParser.h
libFoundation/: CMakeLists.txt
libFoundation/Component/: Component.cpp  Component.h  Component.hpp
libFoundation/DateTime/: DateTime.cpp  DateTime.h
libFoundation/FileSystem/: FileSystem.cpp  FileSystem.h
libFoundation/GoLogger/: GoLogger.h
libFoundation/Json/: Json.hpp  JsonObject.cpp  JsonObject.h
libFoundation/MemoryPool/: MemoryObjectPool.h  MemoryPool.h
libFoundation/Timer/: Timer.h
libFoundation/libFoundation/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  libFoundation.sln  libFoundation.vcxproj  libFoundation.vcxproj.filters
src/: Timer.cpp  aistt.cpp  aistt.h  postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
src/stream/: camera_stream.cpp  camera_stream.h  dai_stream.cpp  dai_stream.h  go_camera.cpp  go_camera.h  image_stream.cpp  image_stream.h  video_stream.cpp  video_stream.h
src/trt/: GoBuffer.cpp  Gobuffer.h  go_engine.cpp  go_engine.h  go_logger.cpp
